# salaam-ussd

./: .gitignore  pyproject.toml  requirements.txt
salaam_ussd/: customers.json  main.py  utils.py
tests/: test_salaam_ussd.py
