[tool.poetry]
name = "salaam-ussd"
version = "0.1.0"
description = ""
authors = ["nicholas-ngatia <nmngatia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
redis = "^4.3.4"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
